--- a/.env.sample
+++ b/.env.sample
@@ -6,3 +6,6 @@ DATABASE_URI=postgresql://localhost/example_dev?sslmode=disable
 
 DATABASE_TIMEOUT=60
 CACHE_URI=redis://user:password@localhost:6379/0
+
+DD_SERVICE=example
+OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4318
