logging using inalog

--- a/.env.sample
+++ b/.env.sample
@@ -9,3 +9,13 @@ CACHE_URI=redis://user:password@localhost:6379/0
 
 DD_SERVICE=example
 OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4318
+
+ELASTIC_APM_SERVICE_NAME=my-example
+ELASTIC_APM_SECRET_TOKEN=
+ELASTIC_APM_SERVER_URL=
+ELASTIC_APM_ENVIRONMENT=development
+
+INALOG_SERVICE_VERSION=example-go:v0.0.1
+INALOG_SERVICE_NAME=example-go
+INALOG_SERVICE_ENV=development
+INALOG_ACCESS_LOG=true
